# tpch-query5

./: CMakeLists.txt  README.md
include/: query5.hpp
src/: main.cpp  query5.cpp
